[package]
name = "fil_types_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_tuple = "0.5.0"
fvm_shared = "0.2.2"
hex = "0.4.3"